# ibzie.dev.fe

./: .gitignore  README.md  docker-compose.yml  future_plan.md  nginx.conf  package.json
FE-Proto/: contact.html  experience.html  index.html  projects.html  research.html  style.css
FE-Proto/css/: style.css
FE-Proto/js/: api.js  main.js  papers.js  projects.js
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_repos.sql  002_commits.sql  003_papers.sql
backend/src/: db.rs  main.rs  seed.rs
backend/src/models/: commit.rs  mod.rs  paper.rs  repo.rs
backend/src/routes/: mod.rs  papers.rs  repos.rs  webhooks.rs
frontend/: package.json
frontend/scripts/: build.mjs
